# axum-production-ready-server

./: .gitignore  Cargo.toml  LICENSE  README.md
migrations/: 20250120141218_user_and_client_migration.down.sql  20250120141218_user_and_client_migration.up.sql  20250201190957_todo_migration.down.sql  20250201190957_todo_migration.up.sql
src/: main.rs
src/api_adapter/: mod.rs
src/api_adapter/common/: common.rs  macros.rs  mod.rs
src/api_adapter/error/: mod.rs
src/api_adapter/error/app_error_response/: app_error_response.rs  app_error_struct.rs  mod.rs
src/api_adapter/success/: app_success_response.rs  mod.rs
src/domain/: mod.rs
src/domain/contracts/: mod.rs
src/domain/contracts/requests/: mod.rs
src/domain/contracts/requests/authentication/: issue_token_request.rs  mod.rs
src/domain/contracts/requests/client/: create_client_request.rs  mod.rs  update_client_request.rs
src/domain/contracts/requests/common/: app_contract.rs  mod.rs  validation_helpers.rs
src/domain/contracts/requests/todo/: create_todo_request.rs  mod.rs  (+1 more)
src/domain/contracts/responses/: mod.rs  user.rs
src/domain/error/: app_errors.rs  mod.rs
src/domain/error/app_errors_adapters/: app_error_security_errors_adapter.rs  app_error_sqlx_adapter.rs  app_error_std_io_adapter.rs  app_error_system_time_error_adapter.rs  mod.rs
src/domain/models/: authorization.rs  client.rs  common.rs  mod.rs  queries.rs  status.rs  todo.rs  user.rs
src/persistance/: database.rs
src/routers/: authentication_router.rs  client_router.rs  common.rs  mod.rs  todo_router.rs  user_router.rs
(+6 files in other folders)
